# serializer version: 1
# name: test_run_basic
  '''
  ✓ timer set off
  ┌─────┐
  │  1  │
  ├─────┤
  │   1 │
  └─────┘
  1 column × 1 row
  ┌─────┐
  │  2  │
  ├─────┤
  │   2 │
  └─────┘
  1 column × 1 row
  ┌─────┐
  │  3  │
  ├─────┤
  │   3 │
  └─────┘
  1 column × 1 row
  
  '''
# ---
# name: test_run_basic_dots
  '''
  ✓ timer set off
  ┌─────┐
  │  1  │
  ├─────┤
  │   1 │
  └─────┘
  1 column × 1 row
  yo
  yo2
  
  '''
# ---
# name: test_run_error[stderr]
  '''
  error[1]: SQL logic error
     ┌─ a.sql:11:3
     │
  11 │   substr(),
     │   ^^^^^^ wrong number of arguments to function substr()
  
  
  '''
# ---
# name: test_run_error[stdout]
  '''
  ✓ timer set off
  ┌───────┐
  │ world │
  ├───────┤
  │ hello │
  └───────┘
  1 column × 1 row
  ┌────────┐
  │ result │
  ├────────┤
  │      2 │
  └────────┘
  1 column × 1 row
  
  '''
# ---
# name: test_run_ipynb_cell_order
  '''
  ✓ timer set off
  ┌─────────┐
  │ 'first' │
  ├─────────┤
  │ first   │
  └─────────┘
  1 column × 1 row
  ┌──────────┐
  │ 'second' │
  ├──────────┤
  │ second   │
  └──────────┘
  1 column × 1 row
  ┌─────────┐
  │ 'third' │
  ├─────────┤
  │ third   │
  └─────────┘
  1 column × 1 row
  
  '''
# ---
# name: test_run_param_file_blob
  '''
  ✓ timer set off
  ┌──────┬─────┬──────────┐
  │  t   │ len │    h     │
  ├──────┼─────┼──────────┤
  │ blob │   4 │ DEADBEEF │
  └──────┴─────┴──────────┘
  3 columns × 1 row
  
  '''
# ---
# name: test_run_param_file_blob_mixed
  '''
  ✓ timer set off
  ┌──────┬───────┬──────┬──────┐
  │  nt  │  nv   │  dt  │  dh  │
  ├──────┼───────┼──────┼──────┤
  │ text │ alice │ blob │ FFFE │
  └──────┴───────┴──────┴──────┘
  4 columns × 1 row
  
  '''
# ---
# name: test_run_param_file_blob_with_script
  '''
  ✓ timer set off
  ┌──────┬─────┬────────────┐
  │  t   │ len │     h      │
  ├──────┼─────┼────────────┤
  │ blob │   5 │ 0001020304 │
  └──────┴─────┴────────────┘
  3 columns × 1 row
  
  '''
# ---
# name: test_run_param_file_missing
  '''
  Error: Failed to read parameter file for 'data': does-not-exist.bin
  
  Caused by:
      No such file or directory (os error 2)
  
  '''
# ---
